@@ -1,3 +1,5 @@
+- all tools
+  o use metalink/aria2 by default (when available) when using a mirrorlist
 - urpmi, urpmq
   o do not display all substring matches on stderr, only a subset of them, and
     suggest to use "-a" to use all matches (#38956)
